Board Game finished 1.0

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -9,9 +9,13 @@
   </head>
   <body>
     <div class="body-title">
-      <h4>Bihus GAMES</h4>
-      <h3>Score:<span id="result"></span></h3>
+      <h2>Bihus GAMES</h2>
+      <h3>Score: <span id="result"></span></h3>
     </div>
     <div class="grid"></div>
+    <div class="footer-container">
+      <h3>Play again:</h3>
+      <button type="button" id="sort">SORT CARDS</button>
+    </div>
   </body>
 </html>
