--- a/simon_says/index.html
+++ b/simon_says/index.html
@@ -15,6 +15,7 @@
         Empezar a jugar!
       </button>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
